# ballast

./: LICENSE  README.md  pyproject.toml
ballast/: __init__.py  cli.py  prefix.py  scorecard.py
examples/: clean_append.jsonl  compaction_bust.jsonl  timestamp_drift.jsonl
tests/: test_cli.py  test_prefix.py
