[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ballast"
version = "0.0.1"
description = "A cache-locality measurement + regression gate for agent harnesses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "findshan" }]
keywords = ["llm", "agent", "kv-cache", "prefix-cache", "prompt", "ci"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
ballast = "ballast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ballast"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
